# aws.nwlabs.dev

./: .editorconfig  .editorconfig-checker.json  .terraform.lock.hcl  Brewfile  CHANGELOG.md  CNAME  README.md  Taskfile.dist.yml  cliff.toml  ecrc.toml  hk.pkl  lychee.toml  pyproject.toml  ruff.toml  run.py  versions.tf
.config-manager.d/: custom.toml  python.toml  standard.toml
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: config.yml  feature.yml
.github/workflows/: dependabot-auto-merge.yml  generate.yml  update-on-push.yml
.kiro/specs/template-variables/: design.md  requirements.md  tasks.md
.kiro/specs/terraform-registry-redirects/: .config.kiro  design.md  requirements.md  tasks.md
docs/: 404.html  CNAME  index.html  index.json
docs/d/: index.html
docs/d/account_primary_contact/: index.html
docs/d/account_regions/: index.html
docs/d/acm_certificate/: index.html
docs/d/acmpca_certificate/: index.html
docs/d/acmpca_certificate_authority/: index.html
docs/d/alb/: index.html
docs/d/alb_listener/: index.html
docs/d/alb_target_group/: index.html
docs/d/ami/: index.html
docs/d/ami_ids/: index.html
docs/d/api_gateway_api_key/: index.html
docs/d/api_gateway_api_keys/: index.html
docs/d/api_gateway_authorizer/: index.html
docs/r/: index.html
src/generate/: __init__.py  cli.py
src/go_vanity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_entry_list_property.py  test_error_handling.py  test_integration.py  test_properties.py  test_summary_property.py  test_template_property.py  test_version_property.py
(+2345 files in other folders)
