[project]
name            = "go-vanity"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = ["jinja2>=3.1.6", "pygithub>=2.9.1"]

  [project.scripts]
  generate = "generate.cli:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generate"]

[dependency-groups]
dev = ["hypothesis>=6.155.7", "pytest>=9.1.1", "ruff>=0.15.20"]
